--- a/client/public/gallery.html
+++ b/client/public/gallery.html
@@ -96,18 +96,18 @@
           </button>
           <!-- LOGO -->                                               
           <!-- Text based logo -->
-          <a class="navbar-brand aa-logo" href="index.html"> Home <span>Property</span></a>
+          <a class="navbar-brand aa-logo" href="/"> Home <span>Property</span></a>
           <!-- Image based logo -->
           <!-- <a class="navbar-brand aa-logo-img" href="index.html"><img src="img/logo.png" alt="logo"></a> -->                   
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="/">HOME</a></li>
              <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="properties.html">PROPERTIES <span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" href="/properties">PROPERTIES <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">                
-                <li><a href="properties.html">PROPERTIES</a></li>
-                <li><a href="properties-detail.html">PROPERTIES DETAIL</a></li>                                            
+                <li><a href="/properties">PROPERTIES</a></li>
+                <li><a href="/properties">PROPERTIES DETAIL</a></li>                                            
               </ul>
             </li>
             <li class="active"><a href="gallery.html">GALLERY</a></li>                                         
@@ -118,7 +118,7 @@
                 <li><a href="blog-single.html">BLOG DETAILS</a></li>                                            
               </ul>
             </li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="/contact">CONTACT</a></li>
             <li><a href="404.html">404 PAGE</a></li>            
           </ul>                          
         </div><!--/.nav-collapse -->       
