Added upload property form including images

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">   
+    <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"> -->
+    <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- slick slider -->
     <link rel="stylesheet" type="text/css" href="css/slick.css">
     <!-- price picker slider -->
@@ -21,7 +23,10 @@
     <!-- Fancybox slider -->
     <link rel="stylesheet" href="css/jquery.fancybox.css" type="text/css" media="screen" /> 
     <!-- Theme color -->
-    <link id="switcher" href="css/theme-color/default-theme.css" rel="stylesheet">     
+    <link id="switcher" href="css/theme-color/default-theme.css" rel="stylesheet">   
+    <!-- Materialize   -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+
 
 
     <!-- socketChat style -->
@@ -240,6 +245,7 @@
   <script src="js/jquery.min.js"></script>   
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/bootstrap.js"></script>   
+  <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
   <!-- slick slider -->
   <script type="text/javascript" src="js/slick.js"></script>
   <!-- Price picker slider -->
