--- a/client/public/gallery.html
+++ b/client/public/gallery.html
@@ -112,14 +112,14 @@
             </li>
             <li class="active"><a href="gallery.html">GALLERY</a></li>                                         
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">BLOG <span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" href="/">BLOG <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">                
-                <li><a href="blog-archive.html">BLOG</a></li>
-                <li><a href="blog-single.html">BLOG DETAILS</a></li>                                            
+                <li><a href="/">BLOG</a></li>
+                <li><a href="/">BLOG DETAILS</a></li>                                            
               </ul>
             </li>
             <li><a href="/contact">CONTACT</a></li>
-            <li><a href="404.html">404 PAGE</a></li>            
+            <li><a href="/">POST PROPERTY</a></li>            
           </ul>                          
         </div><!--/.nav-collapse -->       
       </div>          
