Added more entries of the form

--- a/client/public/gallery.html
+++ b/client/public/gallery.html
@@ -111,15 +111,9 @@
               </ul>
             </li>
             <li class="active"><a href="gallery.html">GALLERY</a></li>                                         
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="/">BLOG <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="/">BLOG</a></li>
-                <li><a href="/">BLOG DETAILS</a></li>                                            
-              </ul>
-            </li>
+           
             <li><a href="/contact">CONTACT</a></li>
-            <li><a href="/">POST PROPERTY</a></li>            
+            <li><a href="/postproperty">POST PROPERTY</a></li>            
           </ul>                          
         </div><!--/.nav-collapse -->       
       </div>          
