Modified property model

--- a/client/public/gallery.html
+++ b/client/public/gallery.html
@@ -107,7 +107,7 @@
               <a class="dropdown-toggle" data-toggle="dropdown" href="/properties">PROPERTIES <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">                
                 <li><a href="/properties">PROPERTIES</a></li>
-                <li><a href="/properties">PROPERTIES DETAIL</a></li>                                            
+                <li><a href="/properties/5cb4d3b8fd80cb4a490fb0f0">PROPERTIES DETAIL</a></li>                                            
               </ul>
             </li>
             <li class="active"><a href="gallery.html">GALLERY</a></li>                                         
